<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="0.5dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@android:color/black">

        <TextView
            android:id="@+id/textView_input_numbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:gravity="end"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="40sp" />

    </LinearLayout>

    <!--    <View-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="1dp"-->
    <!--        android:layout_marginStart="15dp"-->
    <!--        android:layout_marginEnd="15dp"-->
    <!--        android:background="@android:color/darker_gray" -->
    <!--        android:paddingBottom="5dp"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_clear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#002147"
            android:text="@string/all_clear"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_parentheses"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="0.1dp"
            android:layout_weight="1"
            android:background="#002147"
            android:text="@string/parenthesis"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_percent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="0.1dp"
            android:layout_weight="1"
            android:background="#002147"
            android:text="%"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_division"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="0.1dp"
            android:layout_weight="1"
            android:background="#002147"
            android:text="@string/modulo"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/button_seven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#002147"
            android:text="@string/seven"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_eight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#002147"
            android:text="@string/eight"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_nine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#002147"
            android:text="@string/nine"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_multiplication"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#002147"
            android:text="@string/multiply"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_four"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#002147"
            android:text="@string/four"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_five"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#002147"
            android:text="@string/five"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_six"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#002147"
            android:text="@string/six"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_subtraction"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#002147"
            android:text="@string/minus"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_one"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#002147"
            android:text="@string/one"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_two"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#002147"
            android:text="@string/two"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#002147"
            android:text="@string/three"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_addition"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#002147"
            android:text="@string/plus"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button_backspace"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#002147"
            android:src="@drawable/ic_backspace_black_24dp"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button_zero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#002147"
            android:text="@string/zero"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_dot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="0.1dp"
            android:layout_weight="1"
            android:background="#002147"
            android:text="@string/dot"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_equal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="0.1dp"
            android:layout_marginRight="0.1dp"
            android:layout_marginBottom="0.1dp"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/equals"
            android:textColor="#002147"
            android:textSize="40sp" />
    </LinearLayout>
</LinearLayout>